fixing mobile design

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
           <a href="#umkm">Daftar UMKM</a>
           <a href="#contact">Kontak</a>
         </div>
+        <div class="nav-toggle" id="nav-toggle">
+            <i class="fa-solid fa-bars"></i>
+        </div>
       </nav>
     </header>
 
@@ -233,7 +236,7 @@
               ><i class="fa-brands fa-instagram"></i
             ></a>
             <a
-              href="https://www.youtube.com/@desawonorejokecamatanpolok6225"
+              href="https://www.youtube.com/channel/UC_CHANNEL_ID_ANDA"
               target="_blank"
               title="Youtube Desa Wonorejo"
               ><i class="fa-brands fa-youtube"></i
@@ -255,7 +258,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2025 KKN 308 Desa Wonorejo. All Rights Reserved.</p>
+        <p>© 2025 KKN 308 Desa Wonorejo. All Rights Reserved.</p>
       </div>
     </footer>
 
