+fixing umkm coordinate and add icon for each umkm category

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a href="#contact">Kontak</a>
         </div>
         <div class="nav-toggle" id="nav-toggle">
-            <i class="fa-solid fa-bars"></i>
+          <i class="fa-solid fa-bars"></i>
         </div>
       </nav>
     </header>
@@ -128,13 +128,15 @@
           <div id="list-panel">
             <div
               class="umkm-card"
-              data-lat="-7.621637775206332"
-              data-lng="110.89299823715982"
+              data-lat="-7.621882637046893"
+              data-lng="110.89302061022359"
               data-name="Mafaza Store"
             >
-              <div class="card-image"></div>
+              <div class="card-icon-container">
+                <i class="fa-solid fa-store"></i>
+              </div>
               <div class="card-info">
-                <h3>Mafaza Moslem Store</h3>
+                <h3>Toko Mafaza Moslem</h3>
                 <p>⭐ 4.5 (37 reviews)</p>
                 <p>📍 Blimbing, Wonorejo, Polokarto.</p>
               </div>
@@ -142,11 +144,13 @@
 
             <div
               class="umkm-card"
-              data-lat="-7.62179679084908"
-              data-lng="110.89327686773031"
+              data-lat="-7.623188513809774"
+              data-lng="110.89332656415912"
               data-name="Toko Nayla"
             >
-              <div class="card-image"></div>
+              <div class="card-icon-container">
+                <i class="fa-solid fa-store"></i>
+              </div>
               <div class="card-info">
                 <h3>Toko Nayla</h3>
                 <p>⭐ 4.3 (125 reviews)</p>
@@ -156,15 +160,65 @@
 
             <div
               class="umkm-card"
-              data-lat="-7.622220442825711"
-              data-lng="110.88967426438842"
-              data-name="Baldes"
+              data-lat="-7.623926158338126"
+              data-lng="110.88831586479155"
+              data-name="Atharis"
             >
-              <div class="card-image"></div>
+              <div class="card-icon-container">
+                <i class="fa-solid fa-store"></i>
+              </div>
               <div class="card-info">
-                <h3>Balai Desa Wonorejo</h3>
-                <p>⭐ 4.9 (7 reviews)</p>
+                <h3>Toko Atharis</h3>
+                <p>⭐ 4.3 (9 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.625487432763281"
+              data-lng="110.88778669011272"
+              data-name="Zuang"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-gift"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Souvenir Zuang</h3>
+                <p>⭐ 5.0 (1 review)</p>
+                <p>📍 Wonorejo, Kec. Polokarto</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.6218170487400085"
+              data-lng="110.88803135022023"
+              data-name="NH Collection"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shirt"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Baju NH Collection</h3>
+                <p>⭐ 4.4 (93 reviews)</p>
                 <p>📍 Tegalan, Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.6264554363571655"
+              data-lng="110.88754115663352"
+              data-name="Ari Zuda Konveksi"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-scissors"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Konveksi Ari Zuda</h3>
+                <p>⭐ 5.0 (2 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
             </div>
 
@@ -172,27 +226,15 @@
               class="umkm-card"
               data-lat="-7.625064566620378"
               data-lng="110.88579498207831"
-              data-name="Berkah Autowork"
+              data-name="Bengkel Berkah Autowork"
             >
-              <div class="card-image"></div>
+              <div class="card-icon-container">
+                <i class="fa-solid fa-wrench"></i>
+              </div>
               <div class="card-info">
                 <h3>Bengkel Berkah Autowork</h3>
                 <p>⭐ 5.0 (6 reviews)</p>
                 <p>📍 Bangunrejo, Wonorejo, Kec. Polokarto.</p>
-              </div>
-            </div>
-
-            <div
-              class="umkm-card"
-              data-lat="-7.621743273399074"
-              data-lng="110.88800428642746"
-              data-name="Berkah Autowork"
-            >
-              <div class="card-image"></div>
-              <div class="card-info">
-                <h3>NH Collection</h3>
-                <p>⭐ 4.4 (93 reviews)</p>
-                <p>📍 Tegalan, Wonorejo, Kec. Polokarto.</p>
               </div>
             </div>
           </div>
@@ -227,7 +269,7 @@
             <i class="fa-solid fa-envelope"></i>
             <a href="mailto:bimoprawiradj@gmail.com">bimoprawiradj@gmail.com</a>
           </p>
-          
+
           <div class="social-icons">
             <a
               href="https://www.instagram.com/cerita.wonorejo/"
