--- a/index.html
+++ b/index.html
@@ -126,6 +126,24 @@
         </div>
         <div class="umkm-container">
           <div id="list-panel">
+            <!-- Warung Makan -->
+            <div
+              class="umkm-card"
+              data-lat="-7.625275638835706"
+              data-lng="110.88587228814859"
+              data-name="Warung Bakso Mugi Berkah"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Warung Bakso Mugi Berkah</h3>
+                <p>⭐ 5.0 (1 review)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
+            <!-- Toko -->
             <div
               class="umkm-card"
               data-lat="-7.621882637046893"
@@ -133,7 +151,7 @@
               data-name="Mafaza Store"
             >
               <div class="card-icon-container">
-                <i class="fa-solid fa-store"></i>
+                <i class="fa-solid fa-shop"></i>
               </div>
               <div class="card-info">
                 <h3>Toko Mafaza Moslem</h3>
@@ -149,7 +167,7 @@
               data-name="Toko Nayla"
             >
               <div class="card-icon-container">
-                <i class="fa-solid fa-store"></i>
+                <i class="fa-solid fa-shop"></i>
               </div>
               <div class="card-info">
                 <h3>Toko Nayla</h3>
@@ -165,11 +183,27 @@
               data-name="Atharis"
             >
               <div class="card-icon-container">
-                <i class="fa-solid fa-store"></i>
+                <i class="fa-solid fa-shop"></i>
               </div>
               <div class="card-info">
                 <h3>Toko Atharis</h3>
                 <p>⭐ 4.3 (9 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.625045566063426"
+              data-lng="110.88692952209729"
+              data-name="Coffee"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Kopi Essenza Coffee</h3>
+                <p>⭐ (0 reviews)</p>
                 <p>📍 Wonorejo, Kec. Polokarto</p>
               </div>
             </div>
@@ -208,6 +242,72 @@
 
             <div
               class="umkm-card"
+              data-lat="-7.62486884990423"
+              data-lng="110.88606209732188"
+              data-name="Seluler"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-mobile-retro"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Seluler Peppy Cellullar</h3>
+                <p>⭐ 4.8 (4 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.62518522005519"
+              data-lng="110.88792104065925"
+              data-name="bait shop"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Padil Bait Shop</h3>
+                <p>⭐ (0 review)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.6249751160226396"
+              data-lng="110.88673372084365"
+              data-name="toko olahraga"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Olahraga Defense Sport</h3>
+                <p>⭐ (0 review)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <!-- Jasa -->
+            <div
+              class="umkm-card"
+              data-lat="-7.625070554358982"
+              data-lng="110.8878971699745"
+              data-name="Jasa"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-people-carry-box"></i>
+              </div>
+              <div class="card-info">
+                <h3>Jasa Pajak Motor Mobil Mr. Gimin</h3>
+                <p>⭐ 4.7 (3 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <!-- Konveksi -->
+            <div
+              class="umkm-card"
               data-lat="-7.6264554363571655"
               data-lng="110.88754115663352"
               data-name="Ari Zuda Konveksi"
@@ -218,6 +318,88 @@
               <div class="card-info">
                 <h3>Toko Konveksi Ari Zuda</h3>
                 <p>⭐ 5.0 (2 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.625549444357551"
+              data-lng="110.886496367479"
+              data-name="Rumah Konveksi Azzahra"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-scissors"></i>
+              </div>
+              <div class="card-info">
+                <h3>Rumah Konveksi Azzahra</h3>
+                <p>⭐ 3.7 (9 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.625263303820863"
+              data-lng="110.88764423443378"
+              data-name="Rumah Konveksi"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-scissors"></i>
+              </div>
+              <div class="card-info">
+                <h3>Dewi Collection "Produksi Jubah Akhwat"</h3>
+                <p>⭐ 5.0 (1 review)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <!-- Warung -->
+            <div
+              class="umkm-card"
+              data-lat="-7.625728960163263"
+              data-lng="110.88548267448681"
+              data-name="Warung Ijo Bu Siti"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-store"></i>
+              </div>
+              <div class="card-info">
+                <h3>Warung Ijo Bu Siti</h3>
+                <p>⭐ 5.0 (2 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.624931690629158"
+              data-lng="110.88567424442866"
+              data-name="Warung Tensi Rendah"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-store"></i>
+              </div>
+              <div class="card-info">
+                <h3>Warung Tensi Rendah</h3>
+                <p>⭐ 4.3 (6 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
+            <!-- Laundry -->
+            <div
+              class="umkm-card"
+              data-lat="-7.62541370858915"
+              data-lng="110.88663511058266"
+              data-name="laundry"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-jug-detergent"></i>
+              </div>
+              <div class="card-info">
+                <h3>Laundry Faiza</h3>
+                <p>⭐ 5.0 (3 reviews)</p>
                 <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
             </div>
