--- a/index.html
+++ b/index.html
@@ -223,6 +223,86 @@
               </div>
             </div>
 
+            <div
+              class="umkm-card"
+              data-lat="-7.611001455891343"
+              data-lng="110.88145288082148"
+              data-name="Warung makan"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Tahu Kupat Solomuda2</h3>
+                <p>⭐ 3.4 (7 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.611358353952364"
+              data-lng="110.88364782968739"
+              data-name="Warung makan"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Soto Segerrr Mbak Yam</h3>
+                <p>⭐ 4.5 (60 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.611335756048632"
+              data-lng="110.8837785873756"
+              data-name="Warung makan"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Warung Bebek Warbek Pak Yono</h3>
+                <p>⭐ 4.4 (21 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.611442029972848"
+              data-lng="110.88475617490266"
+              data-name="Warung makan"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Ayam Halu Premban</h3>
+                <p>⭐ 5.0 (4 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.611484567192209"
+              data-lng="110.88496941051791"
+              data-name="Warung makan"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Warung Makan "Mbak Sri"</h3>
+                <p>⭐ 4.8 (11 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
             <!-- Toko -->
             <div
               class="umkm-card"
@@ -576,6 +656,150 @@
               </div>
             </div>
 
+            <div
+              class="umkm-card"
+              data-lat="-7.611085201123011"
+              data-lng="110.88155078144861"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Bangunan TB. Murah"</h3>
+                <p>⭐ 4.2 (5 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.611220069226948"
+              data-lng="110.8828264405912"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Allen Game Online</h3>
+                <p>⭐ 4.3 (37 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.611322424458326"
+              data-lng="110.88338836337937"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Besi Tiga Putra</h3>
+                <p>⭐ 5.0 (3 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.6113219076926155"
+              data-lng="110.8834829494857"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Dealer Putra Motor</h3>
+                <p>⭐ 4.8 (8 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.611356535654405"
+              data-lng="110.88406562706828"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Tiwul Lek Di</h3>
+                <p>⭐ 4.1 (7 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.6114441946058715"
+              data-lng="110.88507642678272"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Pebsky Sticker</h3>
+                <p>⭐ 5.0 (4 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.611648731959865"
+              data-lng="110.88539209938817"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Seluler Mazwar Celullar</h3>
+                <p>⭐ 4.9 (7 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.611569457273059"
+              data-lng="110.88560962331344"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Kue Kak Roos</h3>
+                <p>⭐ 5.0 (2 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.611904057211799"
+              data-lng="110.88567318895474"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Bobalabo Batik</h3>
+                <p>⭐ 4.6 (5 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
             <!-- Jasa -->
             <div
               class="umkm-card"
@@ -685,6 +909,38 @@
               <div class="card-info">
                 <h3>Ara Jaya Property</h3>
                 <p>⭐ 5.0 (2 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.6111641216314405"
+              data-lng="110.88241929687545"
+              data-name="Jasa"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-people-carry-box"></i>
+              </div>
+              <div class="card-info">
+                <h3>Arsendy Salon Kecantikan</h3>
+                <p>⭐ 4.0 (4 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.611907799283576"
+              data-lng="110.88610474506616"
+              data-name="Jasa"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-people-carry-box"></i>
+              </div>
+              <div class="card-info">
+                <h3>Kmari Jasa dan Retail</h3>
+                <p>⭐ 5.0 (8 reviews)</p>
                 <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
             </div>
