ganti link ke ig kkn

--- a/index.html
+++ b/index.html
@@ -105,12 +105,18 @@
           <div class="about-text">
             <h3>Anggota KKN</h3>
             <p>
-              Tim kami terdiri dari mahasiswa-mahasiswi dari berbagai disiplin
-              ilmu yang berkolaborasi untuk menyukseskan program kerja KKN di
-              Desa Wonorejo. Setiap anggota membawa keahlian dan semangat untuk
-              berkontribusi secara nyata bagi kemajuan masyarakat.
+              Tim kami terdiri dari mahasiswa-mahasiswi dari Prodi Fisika, Prodi
+              Informatika dan Prodi Agroteknologi yang berkolaborasi untuk
+              menyukseskan program kerja KKN di Desa Wonorejo. Setiap anggota
+              membawa keahlian dan semangat untuk berkontribusi secara nyata
+              bagi kemajuan masyarakat.
             </p>
-            <a href="#" class="btn btn-secondary">Read More</a>
+            <a
+              href="https://www.instagram.com/p/DL4dgisz6x_"
+              target="_blank"
+              class="btn btn-secondary"
+              >Read More</a
+            >
           </div>
         </div>
       </section>
